
        New keyword to turn off the feature toggling the workspace manager
	state to/from map/button state when you press ctrl and the workspace
	manager window is in focus.

   31 - TWMAllIcons patch (by Dan 'dl' Lilliehorn)

	Adds the TWMAllIcons menu, listing all iconified windows on all
	workspaces.

   32 - f.changesize patch (by Dan 'dl' Lilliehorn)

	Adds the function f.changesize which allows you to change the size
	of the focused window via menus and keybindings.

	Example:
	"Down"     = c|s: all           : f.changesize "bottom +10"

   33 - f.changesize bugfix and improvement (by Dan 'dl' Lilliehorn)

	Fixes focusproblems with f.changesize and adds the ability to set
	a new fixed size of a window.

	Example:
	"F1"       = c|s: all           : f.changesize "640x480"

   34 - When crashing, ctwm now refers to ctwm-bugs@free.lp.se instead of
	Claude.Lecommandeur@epfl.ch.

   35 - Changed all the code to use ANSI C prototypes instead of the old
	K&R style.
	[Richard Levitte]

   36 - Only use the DefaultFunction if no function was found.
	[Richard Levitte]

   37 - Correct DontMoveOff

	The DontMoveOff checks when calculating random placement
	wasn't satisfactory.  It ended up placing all windows that
	were small enough to fit in a random place at +50+50 with no
	exception.  The behavior has now been changed to only apply
	to very large windows (almost as large as or larger than the
	screen).  At the same time, the RandomPlacement algorithm and
	the DonMoveOff checks have been tweaked to keep the title
	height in mind, so centering and coordinates correspond to the
	realities of the rest of CTWM.
	[Richard Levitte]

   38 - Correct resizing from menu

	Choosing resize from the menu when not having 3D borders moved
	the target window down and right by a border width.  This was
	an error in window position calculations.
	[Richard Levitte]

   39 - Enhanced info window

	Added the outer geometry.  Added the 3D border width.
	[Richard Levitte]